fix(changelog): word wrap commit message

--- a/docs/changelog/assets/css/app.css
+++ b/docs/changelog/assets/css/app.css
@@ -176,6 +176,7 @@ th {
     margin-bottom: 5px;
     padding: 10px;
     border-radius: 3px;
+    word-wrap: break-word;
 }
 
 .changelog-item .commit-hash {
